@@ -959,6 +959,7 @@ div#archetypes-fieldname-optionalAdvisers,
 div#archetypes-fieldname-otherMCCorrespondences,
 div#archetypes-fieldname-powerAdvisersGroups,
 div#archetypes-fieldname-selectableCopyGroups,
+div#archetypes-fieldname-templateUsingGroups,
 div#archetypes-fieldname-usingGroups {
     max-height: 300px;
     max-width: 500px;
